# abwStereoMatching

./: .gitignore  CMakeLists.txt  LICENSE.txt  OPENCV_DEBUG.props  OPENCV_RELEASE.props  README.md  README.txt  abwStereoMatching.sln  abwStereoMatching.vcxproj  abwStereoMatching.vcxproj.filters
code/: ABW.cpp  ABW.h  adaptiveBinaryWindow.cpp  adaptiveBinaryWindow.h  cvLibs.h  main.cpp  matrixio.cpp  matrixio.h
include/: stereo.hpp  utilities.hpp
lib/: opencv_calib3d248.lib  opencv_calib3d248d.lib  opencv_contrib248.lib  opencv_contrib248d.lib  opencv_core248.lib  opencv_core248d.lib  opencv_features2d248.lib  opencv_features2d248d.lib  opencv_flann248.lib  opencv_flann248d.lib  opencv_gpu248.lib  opencv_gpu248d.lib  opencv_highgui248.lib  opencv_highgui248d.lib  opencv_imgproc248.lib  opencv_imgproc248d.lib  opencv_legacy248.lib  opencv_legacy248d.lib  opencv_ml248.lib  opencv_ml248d.lib  opencv_nonfree248.lib  opencv_nonfree248d.lib  opencv_objdetect248.lib  opencv_objdetect248d.lib  opencv_ocl248.lib  opencv_ocl248d.lib  opencv_photo248.lib  opencv_photo248d.lib  opencv_stitching248.lib  opencv_stitching248d.lib  opencv_superres248.lib  opencv_superres248d.lib  opencv_video248.lib  opencv_video248d.lib  opencv_videostab248.lib  opencv_videostab248d.lib
src/: ABW.cpp  ABW.h  bucket.cpp  bucket.h  cv.h  cvInterface.cpp  cvInterface.h  cvLibs.h  main.cpp  matrix.cpp  matrix.h  matrixio.cpp  matrixio.h  stereo.cpp  stl.h  utilities.cpp  valarray2d.cpp  valarray2d.h
