cmake_minimum_required(VERSION 2.6)
project(abwStereoMatching)
find_package(OpenCV REQUIRED)
include_directories(include)
file(GLOB hdr include/*.hpp)
file(GLOB src src/*.cpp)
add_executable(abwStereoMatching ${src} ${hdr})
set(OPENCV_LIBS opencv_core opencv_imgproc opencv_highgui)
target_link_libraries(abwStereoMatching ${OPENCV_LIBS})
