cmake_minimum_required(VERSION 2.6)
set(PROJECT_NAME abwStereoMatching)
project(${PROJECT_NAME})
find_package(OpenCV REQUIRED)
include_directories(include)
file(GLOB hdr include/*.hpp)
file(GLOB src src/*.cpp)
add_definitions( "-m64 -O3" )
add_executable(${PROJECT_NAME} ${src} ${hdr})
set(OPENCV_LIBS opencv_core opencv_imgproc opencv_highgui)
target_link_libraries(${PROJECT_NAME} ${OPENCV_LIBS})
